syntax = "proto3";

package api.v2;

option go_package = "api/v2/greeter";

service Greeter {
  rpc Hello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string my_message = 1;
}

service Customer {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc ReadAll (ReadAllRequest) returns (ReadAllResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message CustomerModel {
  int32 cus_id = 1;
  string first_name = 2;
  string last_name = 3;
  int32 age = 4;
}

message CreateRequest {
  string first_name = 1;
  string last_name = 2;
  int32 age = 3;
}

message CreateResponse {
    CustomerModel customer = 1;
}

message ReadAllRequest {
}

message ReadAllResponse {
  repeated CustomerModel  customer_list = 1;
}

message UpdateRequest {
  CustomerModel customer = 1;
}

message UpdateResponse {
  int32 updated_count = 1;
}

message DeleteRequest {
  int32 cus_id = 1;
}

message DeleteResponse {
  int32 deleted_count = 1;
}
